SalesforceMetaData/metadata/objects/bofc__BOFCProfileFLSDetails__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFCOBDetails__c</fullName>
        <label>BOFCOBDetails</label>
        <referenceTo>bofc__BOFCOBDetails__c</referenceTo>
        <relationshipLabel>BOFCProfileFLSDetails</relationshipLabel>
        <relationshipName>BOFCProfileFLSDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__Permissions__c</fullName>
        <label>Permissions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Profile_ID__c</fullName>
        <label>Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFCProfileFLSDetails</label>
    <nameField>
        <label>BOFCProfileFLSDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCProfileFLSDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>